display word overflow fixed.

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -209,7 +209,7 @@ a {
 }
 
 .word-display {
-  margin: 0 auto;
+  word-break: break-word;
   text-align: center;
   padding: 2rem;
   color: $hover-blue;
@@ -217,7 +217,8 @@ a {
   font-family: $display-font;
   border: 2px dashed $dark-blue;
   border-radius: 1rem;
-  max-width: 25rem;
+  width: fit-content;
+  max-width: 100%;
   p.word-display {
     font-size: 3.6rem;
     font-family: $display-font;
@@ -343,9 +344,11 @@ a {
 }
 
 .guess-word {
+  word-break: break-word;
+  max-width: 100%;
+  width: fit-content;
   text-align: center;
   margin: 24px auto;
-  width: 50%;
   border-radius: 16px;
   padding: 24px;
   border: 2px dashed $royal-blue;
